# neovim-qt

./: CMakeLists.txt
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  OSXHideTitleBar.h  OSXHideTitleBar.mm  app.cpp  frameless.cpp  frameless.h  input.cpp  main.cpp  mainwindow.cpp  mainwindow.h  shell.cpp  shell.h
src/gui/runtime/doc/: nvim_gui_shim.txt
src/gui/runtime/plugin/: nvim_gui_shim.vim
src/gui/shellwidget/: shellwidget.cpp  shellwidget.h
src/gui/shellwidget/test/: CMakeLists.txt
